<?xml version="1.0" encoding="utf-8"?>

    <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.exoplayer2.ui.PlayerView>

        <ImageView
            android:id="@+id/placeholderImage"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_200dp"
            android:layout_margin="@dimen/dimen_48dp"
            android:src="@drawable/ic_no_video"
            android:fitsSystemWindows="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="playerView, placeholderImage"
            />

        <TextView
            android:id="@+id/stepDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:lineSpacingExtra="@dimen/dimen_2dp"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="stepDescription"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageButton
            android:id="@+id/nextStep"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_48dp"
            app:srcCompat="@drawable/ic_round_arrow_forward_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stepDescription"
            />

        <TextView
            android:id="@+id/stepNumber"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_48dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintStart_toEndOf="@id/prevStep"
            app:layout_constraintEnd_toStartOf="@id/nextStep"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/prevStep"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/dimen_48dp"
            app:srcCompat="@drawable/ic_round_arrow_back_24px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stepDescription"
            />

    </android.support.constraint.ConstraintLayout>
