<resources>
    <string name="app_name">Bake It</string>
    <string name="servings">Servings: %d</string>
    <string name="ingredient">:  %s</string>
    <string name="step">%d : %s</string>
    <string name="step_nav_state">%d / %d</string>
    <string name="ingredientsLabel">Ingredients :</string>
    <string name="stepsLabel">Steps :</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
